compiler/tests/ar/errors/const_index_write.salam
// لغة: العربية
// توقع: E013
دالة الرئيسية:
    ثابت ث : صحيح[3] = [1, 2, 3]
    ث[0] = 9
نهاية
